tests/paczka1/small_fuzzy/68803946.err
Error in line 7: S648 S648 308,3
Error in line 8: QgtQi S196 32,0
Error in line 9: S648 A219 26,8
